# Agentic-Trade

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
agents/: base_agent.py
agents/analysis/: fundamental_analyst.py  market_analyst.py  news_analyst.py  technical_analyst.py
agents/research/: bull_researcher.py
config/: settings.py
core/: error.py  logging.py
graph/: builder.py  nodes.py  state.py
prompts/: bull_researcher_prompt.yaml  fundamental_analyst_prompt.yaml  market_analyst_prompt.yaml  news_analyst_prompt.yaml  technical_analyst_prompt.yaml
tools/: fundamental_tools.py  market_tools.py  news_tools.py  technical_tools.py
tools/utils/: fundamental_tool_helper.py  market_tool_helper.py  news_tool_helper.py  retry_utils.py  technical_tool_helper.py
